# s-on-alpha_dendrites

./: .gitignore  README.md  Readme.md
AlphaAnalysis/: .gitignore  R-package-versions.txt  Readme.md  pyproject.toml
AlphaAnalysis/alphaanalysis/morphkit/: Readme.md  morph.py  preprocessing.py
AlphaAnalysis/alphaanalysis/plot/: __init__.py  clusters.py  distributions.py  gam.py  location.py  morphology.py  offsets.py  plot.py  receptive_field.py  roi_mask.py  rois_on_morph.py  stacks.py  stimulus.py  style.py  traces.py
AlphaAnalysis/alphaanalysis/plot/mplstyles/: notebook.mplstyle  paper.mplstyle  talk.mplstyle
AlphaAnalysis/notebooks/draw_match_templates/: draw_match_templates.ipynb
AlphaAnalysis/notebooks/figures/figure_cell_identification/: alpha_cell_identification.ipynb
AlphaAnalysis/notebooks/figures/figure_clusters/: plot_response_clusters.ipynb
AlphaAnalysis/notebooks/figures/figure_example_rois/: cell_and_rois_calcium.json  cell_and_rois_glutamate.json  plot_example_cells_all_RFs.ipynb  plot_example_traces.ipynb  plot_rf_outline_on_morph.ipynb
AlphaAnalysis/notebooks/figures/figure_morphs_tags_and_locs/: get_cell_ids.ipynb  plot_cell_locations.ipynb  plot_convex_hulls.ipynb  plot_morphs_and_tags.ipynb  plot_soma_sizes.ipynb
AlphaAnalysis/notebooks/figures/figure_roi_gam/: ca_soma_dist_chirp_surround.ipynb  ca_soma_dist_rf_metrics.ipynb  ca_soma_dist_rf_transience.ipynb  glut_soma_dist_rf_metrics.ipynb  (+3 more)
AlphaDjimaging/: README.md  pyproject.toml
AlphaDjimaging/djimaging/autorois/: roi_canvas.py
AlphaDjimaging/djimaging/utils/: image_utils.py  math_utils.py  plot_utils.py  scanm_utils.py
(+126 files in other folders)
