[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djimaging"
version = "0.5.0"
description = "DataJoint Schema of sOn alpha data"
authors = [{ name = "Jonathan Oesterle", email = "jonathan.oesterle.work@gmail.com"}]
dependencies = [
    "datajoint == 0.14.1",
    "numpy == 1.26.2",
    "pandas == 2.2.1",
    "scipy == 1.11.4",
    "scikit-learn == 1.3.2",
    "pingouin == 0.5.4",
    "statsmodels == 0.14.1",
    "matplotlib == 3.8.2",
    "seaborn == 0.13.2",
    "h5py == 3.10.0",
    "cached_property == 1.5.2",
    "pytest == 7.4.3",
    "opencv-python ==  4.8.1.78",
    "scikit-image == 0.19.3",
    "astropy == 6.0.0",
    "ipython == 8.18.1",
    "numba == 0.58.1",
    "h5py == 3.10.0",
    "pygam == 0.9.1",
    "rfest == 2.1.2",
]